package com.constructflow.service.strategy.prioritisation;

public enum PrioritisationKey {
    DUE_DATE,
    COST_DESC,
    RISK,
    DEPENDENCIES
}
