@startuml strategy_prioritisation
title Strategy -- Critical-task prioritisation

skinparam classAttributeIconSize 0
skinparam backgroundColor white

interface PrioritisationStrategy {
  + prioritise(tasks : List<Task>) : List<Task>
  + key() : PrioritisationKey
}

class DueDatePrioritisationStrategy {
  + prioritise(tasks) : List<Task>
  + key() : PrioritisationKey
}

class CostDescPrioritisationStrategy {
  + prioritise(tasks) : List<Task>
  + key() : PrioritisationKey
}

class DependencyCountPrioritisationStrategy {
  + prioritise(tasks) : List<Task>
  + key() : PrioritisationKey
}

class RiskWeightedPrioritisationStrategy {
  - riskScore(task) : double
  + prioritise(tasks) : List<Task>
  + key() : PrioritisationKey
}

class PrioritisationStrategyResolver {
  - byKey : Map<PrioritisationKey, PrioritisationStrategy>
  + resolve(key : PrioritisationKey) : PrioritisationStrategy
}

class TaskService <<client>> {
  + getCriticalTasks(sortKey : PrioritisationKey) : List<TaskResponseDTO>
}

class TaskController <<client>> {
  + getCriticalTasks(sortBy : PrioritisationKey) : ResponseEntity
}

enum PrioritisationKey {
  DUE_DATE
  COST_DESC
  RISK
  DEPENDENCIES
}

PrioritisationStrategy <|.. DueDatePrioritisationStrategy
PrioritisationStrategy <|.. CostDescPrioritisationStrategy
PrioritisationStrategy <|.. DependencyCountPrioritisationStrategy
PrioritisationStrategy <|.. RiskWeightedPrioritisationStrategy

PrioritisationStrategyResolver o--> PrioritisationStrategy
TaskController --> TaskService
TaskService --> PrioritisationStrategyResolver
PrioritisationStrategyResolver --> PrioritisationKey

@enduml
